# telemetry_engine

./: .gitignore  CMakeLists.txt
app/: main_kiosk_arm.c  main_sdl_test.c
core/inc/: boot_logo.h  graphics_3d.h  st7789_logic.h
core/src/: graphics_3d.c  st7789_logic.c
driver/: Makefile  hal_spi_rpi.c  hal_spi_rpi.h  st7789_fb.c
dts/: st7789_overlay.dts
hal/: hal_spi.h  mock_hal_x86.c  mock_hal_x86.h
tests/: test_math.py  test_spi.py
tools/: img_to_c.py
